# Eigenfaces

./: .RData  .Rhistory  CMakeLists.txt  README.txt  eigenface_lib.h  exe  image_lib.h  main.c  plot.R
